// Generated by sylk.build
syntax = "proto3";

package plm.organization.v1;



import "plm/user/v1/user.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service OrganizationService {
	rpc GetOrganization (plm.organization.v1.GetOrganizationRequest) returns (plm.organization.v1.GetOrganizationResponse);
	rpc CreateOrganization (plm.organization.v1.CreateOrganizationRequest) returns (plm.organization.v1.Organization);
	rpc RemoveOrganization (plm.organization.v1.RemoveOrganizationRequest) returns (google.protobuf.Empty);
	rpc AddUser (plm.organization.v1.AddUserRequest) returns (google.protobuf.Empty);
	rpc RemoveUser (plm.organization.v1.RemoveUserRequest) returns (google.protobuf.Empty);
	rpc UpdateUserRole (plm.organization.v1.UpdateUserRoleRequest) returns (google.protobuf.Empty);
}

message Organization {

	string org_id = 1;
	repeated plm.user.v1.User users = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
}

message CreateOrganizationRequest {

	string name = 1;
}

message RemoveOrganizationRequest {

	string org_id = 1;
}

message GetOrganizationRequest {

	string org_id = 1;
}

message GetOrganizationResponse {

	plm.organization.v1.Organization organization = 1;
}

message AddUserRequest {

	string org_id = 1;
	string user_id = 2;
	plm.user.v1.Role role = 3;
}

message RemoveUserRequest {

	string org_id = 1;
	string user_id = 2;
}

message UpdateUserRoleRequest {

	string org_id = 1;
	string user_id = 2;
	plm.user.v1.Role role = 3;
}