// Generated by sylk.build
syntax = "proto3";

package plm.package.v1;



// LockedDependency contains locked-down information about a dependency.
message LockedDependency {

	// The locked version of the dependency.
	string locked_version = 1;
	// The source from which this package version comes (e.g., URL or file path).
	string source = 2;
	// Optional checksum for package integrity verification.
	string checksum = 3;
}

// LockFile holds the locked-down versions of dependencies.
message LockFile {

	// A map of package names to their locked versions and sources.
	map<string, plm.package.v1.LockedDependency> locked_dependencies = 1;
	// A hash or checksum for integrity verification, if applicable.
	string integrity_hash = 2;
}