// Copyright 2023 Sylk Technologies
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// Generated by sylk.build
syntax = "proto3";

package plm.package.v1;



// Manifest holds the metadata for a Protobuf package in the registry.
message Manifest {

	// Name of the package.
	string name = 1;
	// Version of the package.
	string version = 2;
	// A brief description of the package.
	string description = 3;
	// Points to a directory within your project where the .proto files are stored
	string src_dir = 4;
	// The repository URL where the package source can be found.
	string repository_url = 5;
	// License under which the package is distributed.
	string license = 6;
	// Names of the authors or maintainers.
	repeated string authors = 7;
	// Exclude list of directories.
	repeated string exclude = 8;
	// List of dependencies.
	map<string, string> dependencies = 9;
	// Custom metadata in key-value pairs.
	map<string, string> metadata = 10;
}