// Generated by sylk.build
syntax = "proto3";

package plm.registry.v1;



import "plm/library/v1/library.proto";

service RegistryService {
	rpc Download (plm.registry.v1.DownloadRequest) returns (plm.registry.v1.DownloadResponse);
}

message PartialDownloadRequest {

	// The library full name e.g: 'some_package' / '@org/some_package'
	string name = 1;
	// A list of full 'library/package' names
	repeated string packages = 2;
}

message DownloadRequest {

	plm.registry.v1.Compressions compression = 3;
	oneof full_or_partial {
		string full = 1;
		plm.registry.v1.PartialDownloadRequest partial = 2;
	};
}

message DownloadResponse {

	oneof protobuf_or_gz {
		plm.library.v1.Library protobuf = 1;
		bytes gz = 2;
	};
}


enum Compressions {
	PROTOBUF = 0;
	GZ = 1;
}