// Generated by sylk.build
syntax = "proto3";

package plm.registry.v1;



message Server {
	enum LogLevel {
		INFO = 0;
		DEBUG = 1;
		TRACE = 2;
	}

	uint32 port = 1;
	string host = 2;
	plm.registry.v1.Server.LogLevel log_level = 3;
}