// Generated by sylk.build
syntax = "proto3";

package plm.user.v1;



import "google/protobuf/timestamp.proto";

service UserService {
	rpc CreateUser (plm.user.v1.CreateUserRequest) returns (plm.user.v1.User);
	rpc Login (plm.user.v1.LoginRequest) returns (plm.user.v1.LoginResponse);
}

message User {

	string user_id = 1;
	string username = 2;
	string email = 3;
	// Should be non 0 when user is associated with organization
	plm.user.v1.Role role = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
}

message LoginRequest {

	string username = 1;
	string token = 2;
}

message CreateUserRequest {

	string username = 1;
	string password = 2;
}

message LoginResponse {

	string token = 1;
}


enum Role {
	UNKNOWN_ROLE = 0;
	ADMIN = 1;
	CONTRIBUTOR = 2;
}